play back experiment with same random seed

--- a/cuteness-survey-seeded-rand.html
+++ b/cuteness-survey-seeded-rand.html
@@ -68,7 +68,7 @@
 <!-- [onload]: https://developer.mozilla.org/en/DOM/window.onload -->
 <!-- [domReady]: http://api.jquery.com/ready/ -->
 <script>
-  Math.seedrandom(aRandomSeed);
+  Math.seedrandom(0.9416020496282727);
 </script>
 <script src="experiment.js"></script>
 
