--- a/simulate-experiment.html
+++ b/simulate-experiment.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <script src="jquery-1.11.2.min.js"></script>
+<script src="seedrandom.min.js"></script>
 <style>
 .avatar {
 	margin: 0;
@@ -25,6 +26,6 @@ iframe {
 	<script src="simulate-experiment.js"></script>
 	<img class="avatar" id="mouseAvatar" src="images/mouse-avatar.gif"/>
 	<img class="avatar" id="clickAvatar" src="images/click-avatar.gif"/>
-	<iframe id="experiment" src="cuteness-survey.html"/>
+	<iframe id="experiment" src="cuteness-survey-seeded-rand.html"/>
 </body>
 </html>
